syntax = "proto3";
package ununifi.nftbackedloan;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";
import "ununifi/nftbackedloan/nftbackedloan.proto";
import "ununifi/nftbackedloan/params.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/UnUniFi/chain/x/nftbackedloan/types";

service Msg {
  rpc ListNft(MsgListNft) returns (MsgListNftResponse);
  rpc CancelListing(MsgCancelListing) returns (MsgCancelListingResponse);
  rpc PlaceBid(MsgPlaceBid) returns (MsgPlaceBidResponse);
  rpc CancelBid(MsgCancelBid) returns (MsgCancelBidResponse);
  rpc SellingDecision(MsgSellingDecision) returns (MsgSellingDecisionResponse);
  rpc PayRemainder(MsgPayRemainder) returns (MsgPayRemainderResponse);
  rpc Borrow(MsgBorrow) returns (MsgBorrowResponse);
  rpc Repay(MsgRepay) returns (MsgRepayResponse);
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgListNft {
  string sender    = 1;
  NftId  nft_id    = 2 [(gogoproto.nullable) = false];
  string bid_denom = 3;
  string min_deposit_rate = 4 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Duration min_bid_period = 5 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
}

message MsgListNftResponse {}

message MsgCancelListing {
  string sender = 1;
  NftId  nft_id = 2 [(gogoproto.nullable) = false];
}

message MsgCancelListingResponse {}

message MsgPlaceBid {
  string                    sender        = 1;
  NftId                     nft_id        = 2 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin  price         = 3 [(gogoproto.nullable) = false];
  google.protobuf.Timestamp expiry        = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  string                    interest_rate = 5 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  bool                     automatic_payment = 6;
  cosmos.base.v1beta1.Coin deposit           = 7 [(gogoproto.nullable) = false];
}

message MsgPlaceBidResponse {}

message MsgCancelBid {
  string sender = 1;
  NftId  nft_id = 2 [(gogoproto.nullable) = false];
}

message MsgCancelBidResponse {}

message MsgEndNftListing {
  string sender = 1;
  NftId  nft_id = 2 [(gogoproto.nullable) = false];
}

message MsgEndNftListingResponse {}

message MsgSellingDecision {
  string sender = 1;
  NftId  nft_id = 2 [(gogoproto.nullable) = false];
}

message MsgSellingDecisionResponse {}

message MsgPayRemainder {
  string sender = 1;
  NftId  nft_id = 2 [(gogoproto.nullable) = false];
}

message MsgPayRemainderResponse {}

message BorrowBid {
  string                   bidder = 1;
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

message MsgBorrow {
  string             sender      = 1;
  NftId              nft_id      = 2 [(gogoproto.nullable) = false];
  repeated BorrowBid borrow_bids = 3 [(gogoproto.nullable) = false];
}

message MsgBorrowResponse {}

message MsgRepay {
  string             sender     = 1;
  NftId              nft_id     = 2 [(gogoproto.nullable) = false];
  repeated BorrowBid repay_bids = 3 [(gogoproto.nullable) = false];
}

message MsgRepayResponse {}

message MsgUpdateParams {
  string sender = 1;
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}
